[project]
name = "gllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ninja>=1.13.0",
    "packaging>=26.2",
    "psutil>=7.2.2",
    "torch>=2.12.0",
]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]